# pulseAI

./: .gitignore  README.md  main.py  pyproject.toml
agent/: graph.py  nodes.py  state.py
api/: main.py  models.py
api/routes/: chat.py  incidents.py  metrics.py
db/: database.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: AnomalyPanel.tsx  FollowUpChat.tsx  Header.tsx  IncidentModal.tsx  IncidentTable.tsx  MetricsPanel.tsx  ScanPanel.tsx  StatusBadge.tsx
frontend/src/types/: index.ts
