[project]
name = "pulseai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.7",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
